index and css put into correct folder

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <button id="cta2">Go Back</button>
     </div>
-    <script src="animejs/anime.min.js"></script>
+    <script src="node_modules/animejs/anime.min.js"></script>
     <script>
 var btn = document.getElementById('cta');
 var btn2 = document.getElementById('cta2');
